[tool.poetry]
name = "icmc"
version = "0.1.0"
description = ""
authors = ["Claim2001 <akmal.musaev.2001@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
